# uniffi-slab-example

./: Cargo.toml  README.md  build.ps1  build.sh
src/: lib.rs  lib.udl
