[package]
name = "opaque-type"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "opaque_type"

[[bin]]
name = "uniffi-bindgen"
path = "bin/uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0", features = ["cli"] }
slab = "0"
once_cell = "1"
[build-dependencies]
uniffi = { version = "0", features = ["build"] }
